# viewer

./: .gitignore  CMakeLists.txt  README.md  image0.tif  main.cpp
include/glad/: glad.h
shaders/: image.frag
src/: glad.c  main.cpp
